--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "2.14.4",
   "license": "MIT",
   "author": {
-    "name": "Simon Ilincev",
-    "url": "https://simonilincev.com",
-    "email": "simon@simonilincev.com"
+    "name": "mkdirhao",
+    "url": "https://github.com/mkdirhao/",
+    "email": "mkdirhao@qq.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Destaq/cli-homepage"
+    "url": "https://github.com/mkdirhao/"
   },
   "scripts": {
     "start": "next start",
