Update host.yaml add CNAME

--- a/.github/workflows/host.yaml
+++ b/.github/workflows/host.yaml
@@ -41,6 +41,9 @@ jobs:
           git checkout gh-pages
           git reset --hard origin/gh-pages
           touch .nojekyll
-          git add .nojekyll
-          git commit -m "Create .nojekyll file"
+          touch CNAME 
+          echo www.jianso.tech > CNAME
+          git add .nojekyll 
+          git add CNAME
+          git commit -m "Create .nojekyll CNAME file"
           git push --set-upstream origin gh-pages
