--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
   "bioUrl": "https://raw.githubusercontent.com/mkdirHao/mkdirhao/main/README.md",
   "social": {
-    "github": "mkdirhao"
-   
+    "github": "https://github.com/mkdirhao",
+    "blog" : "https://mkdirhao.github.io"
   },
   "theme": "tokyonight",
   "border": true
