--- a/.github/workflows/host.yaml
+++ b/.github/workflows/host.yaml
@@ -41,9 +41,6 @@ jobs:
           git checkout gh-pages
           git reset --hard origin/gh-pages
           touch .nojekyll
-          touch CNAME 
-          echo www.jianso.tech > CNAME
           git add .nojekyll 
-          git add CNAME
-          git commit -m "Create .nojekyll CNAME file"
+          git commit -m "Create .nojekyll file"
           git push --set-upstream origin gh-pages
