edit some config err

--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "bioUrl": "https://raw.githubusercontent.com/mkdirHao/mkdirhao/main/README.md",
   "social": {
     "github": "https://github.com/mkdirhao",
-    "blog" : "https://mkdirhao.github.io"
+    "blog" : "https://mkdirhao.tech"
   },
   "theme": "tokyonight",
   "border": true
