--- a/.github/workflows/host.yaml
+++ b/.github/workflows/host.yaml
@@ -50,4 +50,4 @@ jobs:
         uses: actions/deploy-pages@v1
       - name: Override page_url
         id: change-page-url
-        run: echo "new_page_url=${{ www.mkdirhao.tech }}" >> $GITHUB_OUTPUT
+        run: echo "new_page_url=www.mkdirhao.tech" >> $GITHUB_OUTPUT
