--- a/.github/workflows/host.yaml
+++ b/.github/workflows/host.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       # NOTE: You may want to limit the trigger branch to be "main" or "master" etc.
-      - "none"
+      - "master"
 
 jobs:
   publish:
@@ -42,8 +42,6 @@ jobs:
           git reset --hard origin/gh-pages
           touch .nojekyll
           git add .nojekyll 
-          touch CNAME
-          echo www.mkdirhao.tech > CNAME
           git commit -m "Create .nojekyll cname file"
           git push --set-upstream origin gh-pages
   
