--- a/.github/workflows/host.yaml
+++ b/.github/workflows/host.yaml
@@ -11,7 +11,7 @@ jobs:
       # Deploy to the github-pages environment
     environment:
         name: github-pages
-        url: https://www.mkdirhao.tech
+        url: https://i.mkdirhao.tech
     runs-on: ubuntu-latest
     steps:
       - name: Check out
@@ -47,7 +47,7 @@ jobs:
           touch .nojekyll
           git add .nojekyll
           touch CNAME
-          echo www.mkdirhao.tech > CNAME
+          echo i.mkdirhao.tech > CNAME
           git add CNAME
           git commit -m "Create .nojekyll cname file"
           git push --set-upstream origin gh-pages
